[package]
name = "wirebolt"
version = "0.1.1"
authors = ["Ramon Brand"]
description = "Lightweight and performant TCP wrapper."
keywords = ["tcp", "network", "async", "lightweight"]
categories = ["asynchronous", "network-programming"]
repository = "https://github.com/ramon54321/wirebolt"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
